--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -92,7 +92,8 @@
 .sidebar-2K8pFh,
 .scroller-1JbKMe,
 .scroller-zPkAnE,
-.scroller-2XE8rp {
+.scroller-2XE8rp,
+.scroller-9moviB {
     background-color: transparent;
 }
 
@@ -548,15 +549,16 @@
     color: white;
 }
 
-.container-3FojY8 {
+.zalgo-jN1Ica .messageContent-2qWWxC,
+.zalgo-jN1Ica.cozy-3raOZG .header-23xsNx {
     overflow: visible;
 }
 
-.container-3FojY8 .wrapper-3t9DeA foreignObject {
+.wrapper-2a6GCs .wrapper-3t9DeA foreignObject {
     mask: none;
 }
 
-.container-3FojY8 .avatar-VxgULZ {
+.wrapper-2a6GCs .avatar-VxgULZ {
      border-radius: 6px;
 }
 .placeholder-P6ptfj, 
@@ -570,7 +572,7 @@
     text-shadow: 2px 3px 5px black,2px 3px 5px black;
 }
 
-.timestampCozy-1HNQR2 {
+.cozy-3raOZG .timestamp-3ZCmNB {
     color: white;
 }
 
@@ -642,7 +644,7 @@
     display: none;
 }
 
-.theme-dark .edited-DL9ECl {
+.theme-dark .edited-3sfAzf {
     color: silver;
 }
 
@@ -961,7 +963,10 @@
     box-shadow: none;
 }
 
-.peopleListItem-2nzedh {
+.peopleListItem-2nzedh,
+.theme-dark .sectionAccountCredit-1uNhnJ, 
+.theme-dark .subscriptionDetails-1dUmjl,
+.marketingRefreshTier2Cta-bw9Vyc {
     border: none;
 }
 
@@ -999,7 +1004,7 @@
 
 #app-mount .content-1o0f9g,
 .timestamp-1E3uAL,
-.timestampCompact-29LLPQ,
+.cozy-3raOZG .timestamp-3ZCmNB.alt-1uNpEt,
 .container-3-pyIM,
 .theme-dark .emptyPlaceholder-1zh-Eu .body-bvcIjN,
 .tip-2ab612,
@@ -2258,7 +2263,7 @@
 
 .theme-dark .embedTitleLink-1Zla9e {color: #F29022 !important;}
 
-.standardSidebarView-3F1I7i a, .theme-dark .card-3Qj_Yx a,.bda-slist .bda-footer a,.content-8biNdB a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
+.standardSidebarView-3F1I7i a, .metadataContent-3c_ZXw a,  .theme-dark .card-3Qj_Yx a,.bda-slist .bda-footer a,.content-8biNdB a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
 
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {background-image: linear-gradient(0deg, transparent, transparent 1px, #F29022 0, #F29022 2px, transparent 0);}
 
