--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -117,7 +117,7 @@
 }
 
 .theme-dark .divider-3573oO {
-  background-color: transparent;
+  border: none;
 }
 
 .lookFilled-1Gx00P.colorGreen-29iAKY {
@@ -284,7 +284,10 @@
   border-color: transparent;
 }
 
-.pageActions-1SVAnA * {
+.pageActions-1SVAnA *,
+.theme-dark .sectionAccountCredit-1uNhnJ, 
+.theme-dark .subscriptionDetails-1dUmjl,
+.marketingRefreshTier2Cta-bw9Vyc {
   border: none;
 }
 
@@ -471,7 +474,8 @@
   background: white;
 }
 
-.container-3FojY8 {
+.zalgo-jN1Ica .messageContent-2qWWxC,
+.zalgo-jN1Ica.cozy-3raOZG .header-23xsNx {
   overflow: visible;
 }
 
@@ -735,7 +739,7 @@
 .theme-dark .operations-36ENbA {
   color: white;
 }
-.theme-dark .edited-DL9ECl {
+.theme-dark .edited-3sfAzf {
   color: silver;
 }
 .unread-3zKkbm {
@@ -977,16 +981,17 @@
 .theme-dark .children-19S4PO:after {
   background: none;
 }
-.theme-dark .embedFull-2tM8-- {
+.theme-dark .embedFull-2tM8--,
+.theme-dark .wrapperAudio-1jDe0Q {
   background-color: rgba(0,0,0,0.4);
   border-color: rgba(255,255,255,0.53);
 }
 .theme-dark .icon-22AiRD,
 .theme-dark .emptyPlaceholder-1zh-Eu .body-bvcIjN,
 .theme-dark .topic-TCb_qw,
-.theme-dark .timestampCozy-1HNQR2,
+.theme-dark .cozy-3raOZG .timestamp-3ZCmNB,
 .theme-dark .timestamp-1E3uAL,
-.timestampCompact-29LLPQ {
+.cozy-3raOZG .timestamp-3ZCmNB.alt-1uNpEt {
   color: white;
 }
 .emojiPicker-3m1S-j .stickyHeader-1SS0JU {
@@ -1042,14 +1047,12 @@
   background-color: transparent;
 }
 
+
 /* Change Avatar Size(also moves username for you) */
-.container-3FojY8 .avatar-1BDn8e {
-    width: 50px !important;
-    height: 50px !important;
-}
-/* DON'T TOUCH */
-.container-3FojY8 {
-     overflow: visible;
+.wrapper-2a6GCs .avatar-1BDn8e {
+  width: 50px !important;
+  height: 50px !important;
+  margin-left: -8px;
 }
 
 /* Changes Border-radius Avatar */
@@ -1090,7 +1093,7 @@
 .mentioned-xhSam7 {
   position: relative;
   top: 12px;
-  padding-bottom: 16px;
+  padding-bottom: 16px !important;
 }
 
 .theme-dark .cozy-3raOZG .header-23xsNx {
@@ -1317,7 +1320,7 @@
 .theme-dark .wrapper-2ZbzR9 {
   background: transparent;
 }
-.bda-dark .theme-dark .action-1lSjCi {
+.theme-dark .theme-light .action-1lSjCi {
    background-color: rgba(0,0,0,0.4);
    border: 2px solid rgba(255,255,255,.13);
 }
@@ -1361,10 +1364,7 @@
 .actionButton-2PeQbJ {
   border-radius: 9px;
 }
-.bda-dark .theme-dark .or-3THJsp {
-  background: rgba(0,0,0,0.16);
-  border: none;
-}
+
 
 .theme-dark .title-2CFvp_,
 .theme-dark .sampleLink-KPFu3I {
@@ -1533,6 +1533,17 @@
 .searchResult-3pzFAB.expanded-v2Szsz {
   border-radius: 12px;
 }
+.searchResult-3pzFAB.expanded-v2Szsz,
+.detailsBlock-FoDTGA {
+  background: none;
+}
+
+.preview-2nSL_2 {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+
+
 .searchResult-3pzFAB {
   overflow: visible;
 }
