--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -14,7 +14,8 @@
 .theme-dark .layer-3QrUeG,
 .contentRegionScroller-26nc1e,
 .contentRegion-3nDuYy,
-.sidebarRegionScroller-3MXcoP {
+.sidebarRegionScroller-3MXcoP,
+.scroller-9moviB {
     background-color: transparent;
 }
 
@@ -822,9 +823,9 @@
     box-shadow: none;
 }
 
-.timestampCozy-1HNQR2,
+.cozy-3raOZG .timestamp-3ZCmNB,
 .timestamp-1E3uAL,
-.timestampCompact-29LLPQ {
+.cozy-3raOZG .timestamp-3ZCmNB.alt-1uNpEt {
     color: white;
 }
 
@@ -844,7 +845,10 @@
 }
 
 
-.divider-JfaTT5 {
+.divider-JfaTT5,
+.theme-dark .sectionAccountCredit-1uNhnJ, 
+.theme-dark .subscriptionDetails-1dUmjl,
+.marketingRefreshTier2Cta-bw9Vyc {
     border: none;
 }
 
@@ -1296,7 +1300,7 @@
     background-color: #4d1627;
 }
 
-.theme-dark .edited-DL9ECl,
+.theme-dark .edited-3sfAzf,
 .theme-dark .operations-36ENbA,
 .theme-dark .descriptionDiscriminator-3vUOCc {
     color: silver;
@@ -1546,7 +1550,8 @@
 
 
 .theme-dark .attachment-33OFj0,
-.theme-dark .embedFull-2tM8-- {
+.theme-dark .embedFull-2tM8--,
+.theme-dark .wrapperAudio-1jDe0Q {
     border-color: transparent;
     background-color: rgba(0, 0, 0, 0.3);
 }
@@ -1841,7 +1846,8 @@
     background: none;
 }
 
-.container-3FojY8 {
+.zalgo-jN1Ica .messageContent-2qWWxC,
+.zalgo-jN1Ica.cozy-3raOZG .header-23xsNx {
     overflow: visible;
 }
 
@@ -1962,7 +1968,7 @@
     color: white;
 }
 
-.bda-dark .theme-dark .action-1lSjCi,
+.theme-dark .theme-light .action-1lSjCi,
 .bda-dark .theme-light .action-1lSjCi {
 	background: rgba(0, 0, 0, .36);
 }
@@ -1978,10 +1984,7 @@
 }
 
 .bda-dark .theme-dark .or-3THJsp {
-    background: rgba(0, 0, 0, .26);
     border-radius: 20%;
-    border: none;
-    color: white;
 }
 
 .avatar-21196O {
@@ -1996,6 +1999,14 @@
     margin-left: 8px;
     margin-top: -14px;
 	z-index: 1;
+}
+
+.theme-dark .mentioned-xhSam7 .mention.interactive:hover {
+    color: white;
+}
+
+.preview-2nSL_2 {
+    background-color: rgba(0, 0, 0, .26);
 }
 
 .wrapper-sa6paO {
@@ -2263,7 +2274,7 @@
 
 .theme-dark .embedTitleLink-1Zla9e {color: #F29022 !important;}
 
-.standardSidebarView-3F1I7i a,.theme-dark .card-3Qj_Yx a,.bda-slist .bda-footer a,.content-8biNdB a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
+.standardSidebarView-3F1I7i a,.theme-dark .card-3Qj_Yx a,.bda-slist .bda-footer a,.content-8biNdB a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .metadataContent-3c_ZXw a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
 
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {background-image: linear-gradient(0deg, transparent, transparent 1px, #F29022 0, #F29022 2px, transparent 0);}
 
