--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -19,7 +19,8 @@
 
 .theme-dark .layer-3QrUeG,
 .sidebar-2K8pFh,
-.scroller-305q3I {
+.scroller-305q3I,
+.scroller-9moviB {
     background: transparent;
 }
 
@@ -288,7 +289,8 @@
   .lookLink-9FtZy-.colorBrand-3pXr91,
   .emptyStateSubtext-2njjqg a,
   .theme-dark .container-2x5lvQ section a,
-  .fakeLink-26oLcc {
+  .fakeLink-26oLcc,
+  .metadataContent-3c_ZXw a {
       color: #e5c634;
 }
 
@@ -383,7 +385,10 @@
     border-color: transparent;
 }
 
-.pageActions-1SVAnA * {
+.pageActions-1SVAnA *,
+.theme-dark .sectionAccountCredit-1uNhnJ, 
+.theme-dark .subscriptionDetails-1dUmjl,
+.marketingRefreshTier2Cta-bw9Vyc {
     border: none;
 }
 
@@ -1198,12 +1203,8 @@
     color: silver;
 }
 
-.bda-dark .theme-dark .or-3THJsp {
-    background: rgba(0, 0, 0, 0.53);
-    border: 2px solid rgba(255,255,255,.189);
-}
 
-.bda-dark .theme-dark .action-1lSjCi {
+.theme-dark .theme-light .action-1lSjCi {
     background-color: rgba(0, 0, 0, 0.32);
     border: 2px solid rgba(255,255,255,.189);
     border-radius: 10px;
@@ -1503,6 +1504,7 @@
 
 .theme-dark .searchResult-3pzFAB.expanded-v2Szsz {
     border: none;
+    background-color: rgba(0, 0, 0, .3);
 }
 
 .tab-2Ixsn0, 
@@ -1574,9 +1576,9 @@
     background-color: #f4acc5;
 }
 
-.theme-dark .edited-DL9ECl,
+.theme-dark .edited-3sfAzf,
 .theme-dark .operations-36ENbA,
-.timestampCozy-1HNQR2 {
+.cozy-3raOZG .timestamp-3ZCmNB {
     color: white;
 } 
 
@@ -1697,12 +1699,14 @@
 }
 
 .theme-dark .attachment-33OFj0,
-.theme-dark .embedFull-2tM8-- {
+.theme-dark .embedFull-2tM8--,
+.theme-dark .wrapperAudio-1jDe0Q {
     border-color: transparent;
     background-color: rgba(0,0,0,0.3);
 }
 
-.container-3FojY8 {
+.zalgo-jN1Ica .messageContent-2qWWxC,
+.zalgo-jN1Ica.cozy-3raOZG .header-23xsNx {
     overflow: visible;
 }
 
@@ -2003,8 +2007,14 @@
 
 .markup-2BOw-j code {
     font-size: 0.975rem;
+    border: none;
     background: linear-gradient(135deg, rgba(244, 172, 197, 0.51) 0%, rgba(0, 0, 0, 0.77) 100%);
 }
+
+.detailsBlock-FoDTGA {
+    background: none;
+}
+
 
 .hljs {
     padding: .5em;
@@ -2044,7 +2054,7 @@
 
 .timestamp-1E3uAL,
 .container-3-pyIM,
-.timestampCompact-29LLPQ {
+.cozy-3raOZG .timestamp-3ZCmNB.alt-1uNpEt {
     color: white;
 }
 
