Fixed the loading circles

--- a/My_Theme_Collection/AkameNoKill.theme.css
+++ b/My_Theme_Collection/AkameNoKill.theme.css
@@ -987,7 +987,7 @@
   border: none;
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
   background-color: #9b2742;
   width: 14px;
   border-radius: 4px;
