--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -1125,7 +1125,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border: 1px solid rgba(0, 140, 153, 0.16);
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
     background-color: #008c99;
     width: 14px;
     border-radius: 10px;
