--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -989,7 +989,7 @@
   border: none;
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
   background-color: #805d4c;
   width: 14px;
   border-radius: 4px;
