--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -657,7 +657,7 @@
 .theme-dark .sectionSeparator-2OWiNT {
   border-top: none;
 }
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
   background-color: #129b1a;
   width: 20px;
   border-radius: 30px;
