--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -641,7 +641,7 @@
 .theme-dark .sectionSeparator-2OWiNT {
   border-top: none;
 }
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
   background-color: #ca9e73;
   width: 20px;
   border-radius: 30px;
