--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -1133,7 +1133,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border: 1px solid rgba(114, 142, 61, 0.16);
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
     background-color: #728e3d;
     width: 14px;
     border-radius: 10px;
