--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -1652,7 +1652,7 @@
     border-radius: 7px;
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
     background-color: #582060;
     width: 14px;
     border-radius: 50px;
