--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -2103,7 +2103,7 @@
     border-radius: 7px;
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
     background-color: #731838;
     width: 14px;
     border-radius: 50px;
