--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -1670,7 +1670,7 @@
     2px 0 5px black,2px 0 5px black;
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
     background-color: #5eadea;
     width: 14px;
     border-radius: 10px;
