--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -1901,7 +1901,7 @@
 	color: white;
 }
 
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
     background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.633)100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.523);
