--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -645,7 +645,7 @@
 .theme-dark .sectionSeparator-2OWiNT {
   border-top: none;
 }
-.wanderingCubesItem-WPXqao {
+.lowMotionItem-1DvHia {
   background-color: #789dbf;
   width: 20px;
   border-radius: 30px;
