--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -1670,7 +1670,8 @@
     2px 0 5px black,2px 0 5px black;
 }
 
-.lowMotionItem-1DvHia {
+.lowMotionItem-1DvHia,
+.wanderingCubesItem-WPXqao {
     background-color: #5eadea;
     width: 14px;
     border-radius: 10px;
@@ -2015,8 +2016,7 @@
     color: white;
 }
 
-.markup-2BOw-j pre,
-.theme-dark .wrapper-29NfPK.minimum-2d6zH6 .actions-2vadYq .center-1Vp33r {
+.markup-2BOw-j pre {
     border: none;
     background: none;
 }
@@ -2025,19 +2025,17 @@
     padding: .5em;
 }
 
-.video-1FfuMD {
-  background-color: transparent;
-}
 
-.theme-dark .wrapper-29NfPK {
+
+.theme-dark .wrapper-2qzCYF {
     background-color: rgba(0, 0, 0, 0.26);
 }
 
-.callAvatarStatus-3vMeXZ.voice-3bPYC- {
+.status-1WEaea.voice-3bPYC- {
     background-color: #6b82ce;
 }
 
-.theme-dark .quickSelectPopout-X1hvgV {
+.theme-dark .quickSelectPopoutOption-opKBx9 {
     background: black;
     color: white;
 }
