--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -848,9 +848,26 @@
 	  padding-top: 23px;
 }
 
-.callAvatarBorder-uWp8Ga.voice-3bPYC-.speaking-B2MXPi {
+.border-Jn5IOt.video-3SrWSI.speaking-B2MXPi,
+.border-Jn5IOt.voice-3bPYC-.speaking-B2MXPi {
 	border-radius: 90%;
     box-shadow: inset 0 0 82px 1px rgba(204, 227, 246, 0.97);
+}
+
+.centerButton-3CaNcJ {
+  background: rgba(0, 0, 0, .2);
+}
+
+.centerButton-3CaNcJ:hover {
+  background: rgba(0, 0, 0, .7);
+}
+
+.border-Jn5IOt {
+	border: 4px solid rgba(204, 227, 246, 0.97);
+}
+
+.controlButton-2MhVEL.leaveButton-2YnTyt {
+  background: #dc2727;
 }
 
 .voiceSectionGuildImage-3HwnfL, 
@@ -874,12 +891,9 @@
   mask: none;
 }
 
-.theme-dark .wrapper-29NfPK.minimum-2d6zH6 .actions-2vadYq .center-1Vp33r {
-	border-color: transparent;
-	background-color: transparent;
-}
 
-.theme-dark .wrapper-29NfPK {
+
+.theme-dark .wrapper-2qzCYF {
 	background-color: transparent;
 }
 
@@ -888,15 +902,9 @@
 	color: white;
 }
 
-.video-1FfuMD {
-  background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
-  border: 2px solid rgba(204, 227, 246, 0.25);
-  box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.17);
-  background-color: rgba(65, 95, 132, 0.12);
-  border-radius: 0 0 50px 50px;
-}
 
-.callAvatarStatus-3vMeXZ.voice-3bPYC- {
+
+.status-1WEaea.voice-3bPYC- {
 	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
 	border: 2px solid rgba(204, 227, 246, 0.25);
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.17);
@@ -907,11 +915,8 @@
 	margin-top: -4px;
 }
 
-.callAvatarWrapper-3Ax_xH foreignObject[mask] {
-   mask: none;
-}
 
-.theme-dark .quickSelectPopout-X1hvgV {
+.theme-dark .quickSelectPopoutOption-opKBx9 {
 	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
 	border: 2px solid rgba(204, 227, 246, 0.25);
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.17);
@@ -1901,7 +1906,8 @@
 	color: white;
 }
 
-.lowMotionItem-1DvHia {
+.lowMotionItem-1DvHia,
+.wanderingCubesItem-WPXqao {
     background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.633)100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.523);
