--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -645,7 +645,8 @@
 .theme-dark .sectionSeparator-2OWiNT {
   border-top: none;
 }
-.lowMotionItem-1DvHia {
+.lowMotionItem-1DvHia,
+.wanderingCubesItem-WPXqao {
   background-color: #789dbf;
   width: 20px;
   border-radius: 30px;
@@ -1751,17 +1752,13 @@
   border-color: transparent;
   background-color: rgba(0,0,0,0.40);
 }
-.video-1FfuMD {
-  background-color: transparent;
-}
-.theme-dark .wrapper-29NfPK {
+
+.theme-dark .wrapper-2qzCYF {
   background-color: rgba(0,0,0,0.4);
 }
-.theme-dark .wrapper-29NfPK.minimum-2d6zH6 .actions-2vadYq .center-1Vp33r {
-  border-color: transparent;
-  background-color: transparent;
-}
-.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI {
+
+.border-Jn5IOt.video-3SrWSI.speaking-B2MXPi,
+.border-Jn5IOt.voice-3bPYC-.speaking-B2MXPi {
   box-shadow: 0 0 13px 3px #43b581;
   padding-bottom: 4px;
 }
@@ -1772,13 +1769,13 @@
   opacity: .7;
 }
 
-.theme-dark .callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+.theme-dark .status-1WEaea.voice-3bPYC- {
   border-color: transparent;
 }
-.callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+.status-1WEaea.voice-3bPYC- {
   background-color: #789dbf;
 }
-.theme-dark .quickSelectPopout-X1hvgV {
+.theme-dark .quickSelectPopoutOption-opKBx9 {
   background: rgba(0,0,0,0.8);
   color: white;
 }
