--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -657,7 +657,8 @@
 .theme-dark .sectionSeparator-2OWiNT {
   border-top: none;
 }
-.lowMotionItem-1DvHia {
+.lowMotionItem-1DvHia,
+.wanderingCubesItem-WPXqao {
   background-color: #129b1a;
   width: 20px;
   border-radius: 30px;
@@ -1759,20 +1760,38 @@
   border-color: transparent;
   background-color: rgba(0,0,0,0.40);
 }
-.video-1FfuMD {
-  background-color: transparent;
-}
-.theme-dark .wrapper-29NfPK {
+
+.theme-dark .wrapper-2qzCYF {
   background-color: rgba(0,0,0,0.4);
 }
-.theme-dark .wrapper-29NfPK.minimum-2d6zH6 .actions-2vadYq .center-1Vp33r {
-  border-color: transparent;
-  background-color: transparent;
-}
-.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI {
+
+.border-Jn5IOt.video-3SrWSI.speaking-B2MXPi,
+.border-Jn5IOt.voice-3bPYC-.speaking-B2MXPi {
   box-shadow: 0 0 13px 3px #43b581;
   padding-bottom: 4px;
 }
+.border-Jn5IOt {
+  border: 4px solid #43b581;
+  border-radius: 4px;
+}
+
+.videoAvatar-1ohPSC, 
+.voiceAvatar-14IynY {
+  border-radius: 4px;
+}
+
+.controlButton-2MhVEL.leaveButton-2YnTyt {
+  background: #dc2727;
+}
+
+.centerButton-3CaNcJ {
+  background: rgba(0, 0, 0, .2);
+}
+
+.centerButton-3CaNcJ:hover {
+  background: rgba(0, 0, 0, .7);
+}
+
 .theme-dark .akaBadge-1M-1Gw {
   background-color: black;
 }
@@ -1780,13 +1799,13 @@
   opacity: .7;
 }
 
-.theme-dark .callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+.theme-dark .status-1WEaea.voice-3bPYC- {
   border-color: transparent;
 }
-.callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+.status-1WEaea.voice-3bPYC- {
   background-color: #129b1a;
 }
-.theme-dark .quickSelectPopout-X1hvgV {
+.theme-dark .quickSelectPopoutOption-opKBx9 {
   background: rgba(0,0,0,0.8);
   color: white;
 }
