--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -1133,7 +1133,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border: 1px solid rgba(114, 142, 61, 0.16);
 }
 
-.lowMotionItem-1DvHia {
+.lowMotionItem-1DvHia,
+.wanderingCubesItem-WPXqao {
     background-color: #728e3d;
     width: 14px;
     border-radius: 10px;
@@ -2028,7 +2029,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background: transparent;
 }
 
-.callAvatarStatus-3vMeXZ.voice-3bPYC- {
+.status-1WEaea.voice-3bPYC- {
     background-color: #728e3d;
 }
 
@@ -2037,17 +2038,37 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: white;
 }
 
-.callAvatarBorder-uWp8Ga.voice-3bPYC-.speaking-B2MXPi {
+.border-Jn5IOt.video-3SrWSI.speaking-B2MXPi,
+.border-Jn5IOt.voice-3bPYC-.speaking-B2MXPi {
     box-shadow: inset 0 0 22px 3px #728e3d;
 }
 
-.theme-dark .wrapper-29NfPK {
+.border-Jn5IOt {
+   border-radius: 4px;
+   border: 4px solid #728e3d;
+}
+
+.theme-dark .wrapper-2qzCYF {
     background-color: rgba(114, 142, 61, 0.19);
 }
 
-.video-1FfuMD {
-    background-color: transparent;
+.videoAvatar-1ohPSC, 
+.voiceAvatar-14IynY {
+    border-radius: 4px;
 }
+
+.controlButton-2MhVEL.leaveButton-2YnTyt {
+    background: #dc2727;
+}
+
+.centerButton-3CaNcJ {
+    background: rgba(0, 0, 0, .2);
+}
+  
+.centerButton-3CaNcJ:hover {
+    background: rgba(0, 0, 0, .7);
+}
+  
 
 .theme-dark .quickSelect-3BxO0K,
 .theme-dark .regionSelectName-c5qL8O {
@@ -2062,7 +2083,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-.theme-dark .quickSelectPopout-X1hvgV {
+.theme-dark .quickSelectPopoutOption-opKBx9 {
     background: rgba(114, 142, 61, 0.45);
     color: white;
 }
@@ -2071,10 +2092,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     filter: hue-rotate(90deg) brightness(3);
 }
 
-.theme-dark .wrapper-29NfPK.minimum-2d6zH6 .actions-2vadYq .center-1Vp33r {
-    border-color: transparent;
-    background-color: transparent;
-}
+
 
 [class*="role-3wi9Tf item-PXvHYJ selected-3s45Ha themed-OHr7kt"],
 [class*="role-3wi9Tf item-PXvHYJ themed-OHr7kt"],
